--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "rxjs": "^5.5.6",
-    "zone.js": "^0.8.19"
+    "zone.js": "^0.8.19",
+    "@angular/platform-server": "^5.2.0"
   },
   "devDependencies": {
     "@angular/cli": "1.6.6",
